# template-py-uv-workspace

./: README.md  copier.yml
.github/workflows/: ci.yml
template/: .gitignore  .pre-commit-config.yaml  AGENTS.md.jinja  CLAUDE.md.jinja  justfile  pyproject.toml.jinja  {{ _copier_conf.answers_file }}.jinja
template/.github/: dependabot.yml
template/.github/workflows/: ci.yml  release.yml
template/docs/: ARCHITECTURE.md  folders-and-naming.md
template/docs/adr/: 0001-uv-workspace.md
template/tests/: conftest.py  test_structure.py  test_structure.py.jinja
template/tests/unit/: {% if project_kind == 'workspace' %}test_agent_build.py{% endif %}  {% if project_kind == 'workspace' %}test_eval_audit.py{% endif %}  {% if project_kind == 'workspace' %}test_tools.py{% endif %}
template/{% if project_kind == 'stdlib-tools' %}{{ python_package_name }}{% endif %}/: __init__.py
template/{% if project_kind == 'workspace' %}packages{% endif %}/platform-core/: README.md  pyproject.toml
template/{% if project_kind == 'workspace' %}packages{% endif %}/platform-core/src/platform_core/: tools.py  tracing.py
